==> savvn001/STM32_FLIGHT_CONTROLLER/Drivers/IMU.c <==
#include "IMU.h"
#include "stm32f4xx_hal.h"
#include "arm_math.h"
#include "tim.h"
#define TIMER_CLK_FREQ 100000000.0f
#define Kp 2.0f * 5.0f // these are the free parameters in the Mahony filter and fusion scheme, Kp for proportional feedback, Ki for integral
#define Ki 0.0f

void writeByte(uint8_t address_tx, uint8_t subAddress, uint8_t data) {
	uint8_t data_write[2];
	data_write[0] = subAddress;
	data_write[1] = data;
	//i2c.write(address, data_write, 2, 0);


	HAL_I2C_Master_Transmit(&hi2c2, address_tx, data_write, 2, 10);
}

char readByte(uint8_t address_tx, uint8_t address_rx, uint8_t subAddress) {
	uint8_t data[1]; // `data` will store the register data
	uint8_t data_write[1];
	data_write[0] = subAddress;
	//i2c.write(address, data_write, 1, 1); // no stop
	//i2c.read(address, data, 1, 0);


	HAL_I2C_Master_Transmit(&hi2c2, address_tx, data_write, 1, 10); //Send adress of register ONLY
	HAL_I2C_Master_Receive(&hi2c2, address_tx, data, 1, 10);

	return data[0];
}

void readBytes(uint8_t address_tx, uint8_t address_rx, uint8_t subAddress,
	uint8_t count, uint8_t * dest) {
	uint8_t data[14];
	uint8_t data_write[1];
	data_write[0] = subAddress;
	//i2c.write(address, data_write, 1, 1); // no stop
	//i2c.read(address, data, count, 0);


	HAL_I2C_Master_Transmit(&hi2c2, address_tx, data_write, 1, 10);
	HAL_I2C_Master_Receive(&hi2c2, address_rx, data, count, 10);

	for (int ii = 0; ii < count; ii++) {
		dest[ii] = data[ii];
	}
}

void readMagData(int16_t * destination) {
	uint8_t rawData[7]; // x/y/z gyro register data, ST2 register stored here, must read ST2 at end of data acquisition
	if (readByte(AK8963_ADDRESS_TX, AK8963_ADDRESS_RX, AK8963_ST1) & 0x01) { // wait for magnetometer data ready bit to be set

		readBytes(AK8963_ADDRESS_TX, AK8963_ADDRESS_RX, AK8963_XOUT_L, 7, &rawData[0]); // Read the six raw data and ST2 registers sequentially into data array
		uint8_t c = rawData[6]; // End data read by reading ST2 register
		if (!(c & 0x08)) { // Check if magnetic sensor overflow set, if not then report data
			destination[0] =
					(int16_t) (((int16_t) rawData[1] << 8) | rawData[0]); // Turn the MSB and LSB into a signed 16-bit value
			destination[1] =
					(int16_t) (((int16_t) rawData[3] << 8) | rawData[2]); // Data stored as little Endian
			destination[2] =
					(int16_t) (((int16_t) rawData[5] << 8) | rawData[4]);
		}
	}
}
